kubernetes/istio/all-in-one/virtual-service-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service1-virtual-service
spec:
  hosts:
  - service1
  gateways:
  - virtual-service-gateway
  http:
  - route:
    - destination:
        host: service1
        subset: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service2-virtual-service
spec:
  hosts:
  - service2
  gateways:
  - virtual-service-gateway
  http:
  - route:
    - destination:
        host: service2
        subset: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service3-virtual-service
spec:
  hosts:
  - service3
  gateways:
  - virtual-service-gateway
  http:
  - route:
    - destination:
        host: service3
        subset: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service4-virtual-service
spec:
  hosts:
  - service4
  gateways:
  - virtual-service-gateway
  http:
  - route:
    - destination:
        host: service4
        subset: v2
